--- a/my-react-portfolio/src/index.css
+++ b/my-react-portfolio/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap');
+
+@layer base {
+    body {
+        font-family: 'Maven Pro', sans-serif;
+    }
+    li {
+        @apply px-4;
+        @apply cursor-pointer;
+    }
+}
