added projects and styling to portfolio

--- a/my-react-portfolio/src/index.css
+++ b/my-react-portfolio/src/index.css
@@ -14,3 +14,18 @@
         @apply cursor-pointer;
     }
 }
+
+.content-div {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 250px;
+}
+
+.content-div:hover {
+    background-image: linear-gradient(
+        to right,
+        rgba(119, 190, 146, 0.8),
+        hsla(120, 30%, 40%, 0.8)
+    )!important;
+}
